--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@
     font-family: 'Norse';
     font-weight: 500;
     font-display: swap;
-    src: url(./assets/Norse-Bold.otf) format('otf');
+    src: url(../public/Norse-Bold.otf) format('otf');
   }
 }
